src/pages/ProjectPage/ProjectTitle/ProjectTitle.scss
@import '../../../styles/variables.scss';

.projectTitle {
  display: flex;
  align-items: center;
  margin: 0;
  color: $color-black;
  font-weight: 300;
  margin-top: 1rem;
  margin-bottom: 1.5rem;

  &:hover {
    .edit {
      opacity: 1;
    }
  }

  span[contenteditable="true"] {
    background-color: $color-gray;
  }

  span:empty {
    display: inline-block;
    min-width: 0.5rem;
  }
}

.projectPic {
  width: 3.5rem;
  height: 3.5rem;
  margin-right: 1rem;
  box-sizing: border-box;
  object-fit: contain;
}

.prefix {
  display: inline-block;
  margin-left: 0.5rem;
  color: silver;
}

.edit {
  display: inline-block;
  box-sizing: content-box;
  vertical-align: center;
  color: silver;
  cursor: pointer;
  padding: 7px;
  margin-left: 0.5rem;
  font-size: 1rem;
  background-color: white;
  border: 1px solid lighten($color-black, 70%);
  border-radius: 50%;
  opacity: 0;
  transition: $transition;

  &:hover {
    background-color: $color-lightgray;
    fill: $color-dark;
    border-color: $color-dark;
  }
}

.save {
  @extend .edit;
  opacity: 1;
  color: $color-green;
  border: 1px solid $color-green;

  &:hover {
    background-color: $color-green;
    fill: white;
    border-color: $color-green;
  }
}

.wrong {
  background-color: $color-red !important;
  color: white;
}

